--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,44 @@
+nav {
+    background-color: cornflowerblue;
+    padding: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+}
+
+nav li {
+    display: inline;
+    margin-right: 25px;
+}
+
+nav a {
+    color: white;
+    font-size: 1.5em;
+}
+
+nav a:hover {
+    color: pink;
+    text-decoration: none;
+}
+
+body {
+    background-color: lightblue;
+    text-align: center;
+}
+  
+main {
+    margin-right: 20px;
+    margin-left: 20px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin: auto;
+}  
+
 h1{
     text-align: center;
     color: cornflowerblue;
@@ -6,16 +47,9 @@ h1{
 img {
     width: 400px;
     height: 325px;
-  
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    margin: auto;
-}
+
 
 h2{
     text-align: center;
