--- a/public/style.css
+++ b/public/style.css
@@ -92,11 +92,11 @@ h2{
 footer{
     background-color: lavender;
 }
-/* 
-/* .alert-danger{
+
+.alert-danger{
     width: 100%;
     height: 30px;
     background-color: red;
     opacity: .5;
     color: black;
-} */ */
+} 
