--- a/public/style.css
+++ b/public/style.css
@@ -100,3 +100,14 @@ footer{
     opacity: .5;
     color: black;
 } 
+
+.form-subcontainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 10px;
+}
+
+.form-item{
+    padding: 10px;
+}
